# plexarr

./: Dockerfile  prestart.sh  pyproject.toml
plexarr/: convert.py  main.py  models.py  server.py  utils.py
tests/: test_downloader.py
