[tool.poetry]
name = "plexarr"
version = "0.1.0"
description = "bridge between remote plex servers and radarr to get stuff"
authors = ["Dennis Lutter <lad1337@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = {extras = ["all"], version = "^0.46.0"}
rfeed = "^1.1.1"
plexapi = "^3.3.0"
flake8 = "^3.7.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
