[tool.poetry]
name = "plexarr"
version = "0.1.0"
description = "bridge between remote plex servers and radarr to get stuff"
authors = ["Dennis Lutter <lad1337@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = {extras = ["all"], version = "^0.46.0"}
flake8 = "^3.7.9"
furl = "^2.1.0"
torf = "^2.1.0"
aria2p = "^0.7.1"
plexapi = "^3.3.0"
tqdm = "^4.42.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
ipython = "^7.11.1"
pytest = "^5.3.5"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
